# essir-medical-ir

./: .gitignore  README.md  notes.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_trial.xml
essir_medical_ir/: __init__.py
notebooks/: basic_retrieval_pipeline_clinical_trials_1.ipynb  basic_retrieval_pipeline_clinical_trials_2.ipynb
