[project]
name = "essir-medical-ir"
description = "ESSIR 2023 hands-on for Medical IR."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "importlib-metadata~=7.0",
    "jupyter",
    "python-terrier",
    "pandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "approvaltests~=10.0",
    "bandit[toml]~=1.7",
    "flake8~=7.0",
    "pylint~=3.0",
    "pytest~=7.4",
    "pytest-cov~=4.0",
]

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["essir_medical_ir"]
namespaces = false

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.pylint.messages_control]
disable = [
    "C",
    "R",
    "fixme",
    "logging-fstring-interpolation"
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
